--- a/src/styles/supervisor.css
+++ b/src/styles/supervisor.css
@@ -2,11 +2,11 @@
 .supervisor-container {
     margin-left: 20%;
     width: 80%;
-    padding: 10px;
+    padding: 10px 30px 0 30px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-
+    background-color:rgb(187, 218, 236);
   }
   
   .supervisor-title {
@@ -63,6 +63,17 @@
   
   /* Responsive design */
   @media (max-width: 768px) {
+    .supervisor-container {
+      margin-left:0;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+  
+    }
+    
+    .supervisor-title {
+      width:100%;
+    }
     .panels-container {
       flex-direction: column;
     }
