Actualziacion Supervisor y mejoras visuales

--- a/src/styles/control.css
+++ b/src/styles/control.css
@@ -252,6 +252,11 @@
 
   /* Responsive */
   @media (max-width: 768px) {
+    .admin-container {
+      margin-left: 0;
+      width: 100%;
+      }
+
     .admin-table thead {
       display: none;
     }
