--- a/src/styles/enfermeria.css
+++ b/src/styles/enfermeria.css
@@ -137,6 +137,17 @@
         transform: translateY(-3px);
         box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
       }
+.item-cita {
+  border-left: 6px solid #4CAF50; /* color por defecto */
+}
+
+.emergency-card {
+  border-left-color: #ff3d3d;
+}
+
+.isss-card {
+  border-left-color: #007bff;
+}
 
 /* Estilo para emergencias */
 .item-cita.emergency {
@@ -269,10 +280,21 @@
         animation: pulse 2s infinite;
       }
       
+      .isss-card {
+        background-color: #f0f1ff;
+        animation: pulse2 2s infinite;
+      }
+
       @keyframes pulse {
         0% { box-shadow: 0 0 0 0 rgba(255, 61, 61, 0.4); }
         70% { box-shadow: 0 0 0 10px rgba(255, 61, 61, 0); }
         100% { box-shadow: 0 0 0 0 rgba(255, 61, 61, 0); }
+      }
+
+       @keyframes pulse2 {
+        0% { box-shadow: 0 0 0 0 rgba(61, 97, 255, 0.4); }
+        70% { box-shadow: 0 0 0 10px rgba(61, 122, 255, 0); }
+        100% { box-shadow: 0 0 0 0 rgba(61, 113, 255, 0); }
       }
 
       .emergency-tag {
