--- a/src/styles/paciente.css
+++ b/src/styles/paciente.css
@@ -356,6 +356,68 @@
     width: 100%;
   }
 }
+.pac-toggle-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+.pac-toggle-label {
+  font-weight: 500;
+  font-size: 1.1rem;
+  color: #555;
+}
+
+/* Switch */
+.pac-toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 26px;
+}
+
+.pac-toggle-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.pac-toggle-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+  border-radius: 26px;
+}
+
+.pac-toggle-slider::before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+.pac-toggle-switch input:checked + .pac-toggle-slider {
+  background-color: #1976d2;
+}
+
+.pac-toggle-switch input:checked + .pac-toggle-slider.toggle-rojo {
+  background-color: #e94646; /* rojo suave */
+}
+
+.pac-toggle-switch input:checked + .pac-toggle-slider::before {
+  transform: translateX(24px);
+}
 
 /* Floating Status - Versión paciente */
 .floating-status-paciente {
