--- a/src/styles/doctor.css
+++ b/src/styles/doctor.css
@@ -20,8 +20,10 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
   width: 100%;
-  background: transparent !important; /* Anula el gradient */
-  padding: 0;
+  background: #bbecff;
+  border-radius: 10px;
+  /*background: transparent !important;  Anula el gradient */
+  padding: 20px;
   margin: 0;
 }
 
@@ -266,4 +268,63 @@
 
 .action-buttons {
   margin-top: 1rem;
+}
+
+/* programadas */
+
+.doctor-layout {
+  display: flex;
+  gap: 0.8rem;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.sidebar-programadas {
+  width: 400px;
+  max-height: 90vh;
+  overflow-y: auto;
+  padding: 1rem;
+  border-left: 2px solid #ddd;
+  background: #e6ffd0;
+  border-radius: 10px;
+}
+.card-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
+.cita-card {
+  background: white;
+  border: 1px solid #ddd;
+  border-left: 5px solid #2196f3;
+  padding: 0.75rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  font-size: 14px;
+}
+
+.cita-card .nombre {
+  font-weight: bold;
+  margin-bottom: 0.25rem;
+}
+
+.cita-card .motivo {
+  color: #444;
+}
+
+.cita-card .fecha {
+  color: #666;
+  font-size: 0.85rem;
+}
+
+.emergency {
+  color: red;
+  margin-right: 4px;
+}
+
+.sidebar-title {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+  font-weight: bold;
 }
