--- a/src/styles/control.css
+++ b/src/styles/control.css
@@ -1,11 +1,11 @@
 .admin-container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 10px 30px 0 30px;
-  min-height: 100vh;
+  width: 100%;
+  padding: 20px 30px 30px 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color:rgb(187, 218, 236);
+  background-color: rgb(187, 218, 236);
+  box-sizing: border-box;
   }
   
   .admin-title {
