--- a/src/styles/doctor.css
+++ b/src/styles/doctor.css
@@ -4,14 +4,26 @@
 
 /* Panel de citas - Grid Layout */
 .doctor-container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 10px 30px 0 30px;
-  min-height: 100vh;
+  width: 100%;
+  padding: 20px 30px 30px 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color:rgb(187, 218, 236);
+  background-color: rgb(187, 218, 236);
+  box-sizing: border-box;
+}
 
+.doctor-title {
+  background-color: #e2e8f0; /* gris claro suave */
+  color: #2c5282;
+  text-align: center;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 /* Grid específico para el panel de doctor */
@@ -156,6 +168,17 @@
     grid-template-columns: 1fr;
   }
 
+  .sidebar-programadas{
+    width: 100%;
+  }
+  
+
+}
+
+@media (max-width: 480px) {
+  .doctor-container{
+    padding: 0.5rem;
+  }
 }
 
 /* Animaciones */
@@ -283,10 +306,9 @@
   width: 400px;
   max-height: 90vh;
   overflow-y: auto;
-  padding: 1rem;
+  padding: 0.6rem;
   border-left: 2px solid #ddd;
   background: #e6ffd0;
-  border-radius: 10px;
 }
 .card-list {
   display: flex;
@@ -311,11 +333,13 @@
 
 .cita-card .motivo {
   color: #444;
+  margin-bottom: 0;
 }
 
 .cita-card .fecha {
   color: #666;
   font-size: 0.85rem;
+  margin-bottom: 0;
 }
 
 .emergency {
