--- a/src/styles/enfermeria.css
+++ b/src/styles/enfermeria.css
@@ -1,12 +1,12 @@
 
 .enfermeria-container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 10px 30px 0 30px;
-  min-height: 100vh;
+  width: 100%;
+  padding: 20px 30px 30px 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color:rgb(187, 218, 236);
+  background-color: rgb(187, 218, 236);
+  box-sizing: border-box;
 }
 
 .enfermeria-title {
@@ -252,12 +252,7 @@
         .enfermeria-container {
           margin-left: 0;
           width: 100%;
-          padding-top: 70px;
           align-items: stretch; /* o center según prefieras */
-        }
-    
-        .enfermeria-title {
-          margin-top: 10px;
         }
 
         .tab-list {
@@ -473,6 +468,10 @@
 }
 
 @media (max-width: 480px) {
+.enfermeria-container{
+  padding: 0.5rem;
+}
+
   .enf-card-banner {
     width: 100%;
     height: auto;
