--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,64 @@
 /* styles/globals.css */
+.layout {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.header {
+  background-color: #3f91e8;
+  padding: 0.6rem;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  z-index: 100;
+  position: sticky;
+  top: 0;
+}
+
+.main-content {
+  display: flex;
+  flex: 1;
+overflow: hidden;
+}
+
+.main {
+  flex: 1;
+  padding: 1rem;
+  overflow-y: auto;
+  background-color: linear-gradient(90deg, #3182ce 0%, #4fd1c5 100%);
+}
+
+.sidebar {
+  width: 400px;
+  background-color: #e2e8f0;
+  padding: 1rem;
+  border-left: 1px solid #ccc;
+}
+
+/* Responsive: ocultar sidebar en pantallas pequeñas */
+@media (max-width: 768px) {
+  .layout {
+    flex-direction: column;
+  }
+
+  .main-content {
+    flex-direction: column; /* ← esto es lo que te falta */
+  }
+
+  .sidebar {
+    width: 100%;
+    border-left: none;
+    border-top: 1px solid #ccc;
+  }
+
+  .main {
+    padding: 10px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
 
 
 .ReactModal__Overlay {
@@ -44,33 +104,12 @@
 
 /* Reset y contenedor */
 
-.app-container {
-  display: flex;
-  flex-direction: row;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-.container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 20px;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.content {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  min-height: 100vh;
-  background: linear-gradient(90deg, #3182ce 0%, #4fd1c5 100%);
-}
 
 /* Globales para botones, y colores, titulos y forms*/
 
@@ -78,7 +117,8 @@ body {
   margin: 0;
   font-family: 'Arial', sans-serif;
   background: linear-gradient(90deg, #3182ce 0%, #4fd1c5 100%);
-  min-height: 100vh;
+  height: 100%;
+  padding: 0;
 }
 
 a {
@@ -86,7 +126,7 @@ a {
   text-decoration: none;
 }
 
-button {
+button.ok {
   background-color: #28a745;  /* Verde para los botones */
   color: white;
   font-weight: 600;
@@ -364,17 +404,6 @@ h2, h3 {
 
 
 @media (max-width: 768px) {
-  .container {
-    margin-left: 0;
-    width: 100%;
-    padding-top: 80px;
-    align-items: stretch; /* o center según prefieras */
-  }
-
-  .app-container {
-    flex-direction: column;
-  }
-
   .title {
     margin-top: 70px;
   }
