--- a/src/styles/paciente.css
+++ b/src/styles/paciente.css
@@ -1,12 +1,12 @@
 /* paciente.css - Estilos para la página de paciente */
 .paciente-container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 10px 30px 0 30px;
-  min-height: 100vh;
+  width: 100%;
+  padding: 20px 30px 30px 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color:rgb(187, 218, 236);
+  background-color: rgb(187, 218, 236);
+  box-sizing: border-box;
 }
 
 .paciente-title {
@@ -215,12 +215,7 @@
     .paciente-container {
       margin-left: 0;
       width: 100%;
-      padding-top: 80px;
       align-items: stretch; /* o center según prefieras */
-    }
-
-    .paciente-title {
-      margin-top: 70px;
     }
 
     .table-material th,
@@ -229,10 +224,6 @@
       font-size: 14px;
     }
     
-    button {
-      padding: 10px 15px;
-      font-size: 14px;
-    }
   }
   
   /* Animaciones */
