--- a/src/styles/supervisor.css
+++ b/src/styles/supervisor.css
@@ -1,16 +1,15 @@
 /* Estilos generales */
 .supervisor-container {
-  margin-left: 20%;
-  width: 80%;
-  padding: 10px 30px 0 30px;
-  min-height: 100vh;
-  height: auto; /* Asegura que crezca si el contenido es mayor */
+  width: 100%;
+  padding: 20px 30px 30px 30px;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  background-color:rgb(187, 218, 236);
+  background-color: rgb(187, 218, 236);
+  box-sizing: border-box;
 }
 
-.title {
+.supervisor-title {
   background-color: #e2e8f0; /* gris claro suave */
   color: #2c5282;
   text-align: center;
@@ -77,30 +76,51 @@
 /* Cards de resumen */
 .summary-cards {
   display: flex;
-  gap: 15px;
+  gap: 10px;
   margin-bottom: 20px;
   flex-wrap: wrap;
 }
 
 .summary-card {
-  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  width: 100%;
+  padding: 10px;
   border-radius: 8px;
-  padding: 15px;
   box-shadow: 0 1px 5px rgba(0,0,0,0.1);
-  text-align: center;
+  background-color: #fff;
+}
+
+.summary-icon {
+  font-size: 1.8rem;
+  color: #3182ce;
+}
+
+.divider {
+  height: 30px;
+  width: 2px;
+  background-color: #ccc;
+  margin: 0 6px;
 }
 
 .summary-card h3 {
-  margin: 0 0 10px 0;
-  color:rgb(43, 23, 23);
-  font-size: 18px;
+  margin: 0;
+  font-size: 16px;
+  color: rgb(43, 23, 23);
+  white-space: nowrap;
 }
 
 .summary-card p {
-  margin: 0;
-  font-size: 24px;
+  margin-left: auto;
+  font-size: 22px;
   font-weight: bold;
-  color:rgb(64, 65, 60);
+  color: rgb(64, 65, 60);
+  line-height: 1; /* Asegura que no tenga altura extra */
+  display: flex;
+  align-items: center;
+  transform: translateY(10px);
 }
 
 /* Colores diferentes para cada hijo (puedes usar clases específicas o :nth-child) */
